# Projet_Django_API_RECRUTEMENT

./: .gitignore  README.md  pyproject.toml
api_recrutement/: manage.py  requirements.txt
api_recrutement/api_recrutement/: asgi.py  settings.py  urls.py  wsgi.py
api_recrutement/apps/matching/: admin.py  models.py
api_recrutement/apps/matching/api/: serializers.py  urls.py  views.py
api_recrutement/apps/matching/migrations/: 0001_initial.py
api_recrutement/apps/matching/services/: nlp_utils.py  scoring.py
config/: settings.py  urls.py
